[package]
name = "cargo-llvm-codecov-converter"
description = "conversion utility from llvm-cov format to codecov format"
license = "MIT"
licence-file = "LICENCE"
version = "0.1.0"
authors = ["Mason Boeman <masonboeman@gmail.com>"]
edition = "2018"
repository = "https://github.com/maboesanman/cargo-llvm-codecov-converter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
defaultmap = "0.5.0"
substring = "1.4.0"
rayon = "1.5.0"
